--- a/openssl-static/pom.xml
+++ b/openssl-static/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-tcnative-parent</artifactId>
-    <version>1.1.33.Fork26-SNAPSHOT</version>
+    <version>1.1.33.Fork26</version>
   </parent>
   <artifactId>netty-tcnative-openssl-static</artifactId>
   <packaging>jar</packaging>
@@ -34,7 +34,7 @@
     <opensslBuildDir>${project.build.directory}/openssl-${opensslVersion}</opensslBuildDir>
     <linkStatic>true</linkStatic>
     <!-- Don't deploy this artifact to Maven Central -->
-    <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.deploy.skip>false</maven.deploy.skip>
   </properties>
 
   <build>
@@ -133,11 +133,12 @@
                     <taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 
                     <!-- Download the openssl source. -->
-                    <ftp action="get" server="ftp.openssl.org" remotedir="source" userid="anonymous" password="anonymous" passive="yes" verbose="yes">
+                    <get src="https://www.openssl.org/source/openssl-${opensslVersion}.tar.gz" dest="${project.build.directory}" verbose="on" />
+                    <!--<ftp action="get" server="ftp.openssl.org" remotedir="source" userid="anonymous" password="anonymous" passive="yes" verbose="yes">
                       <fileset dir="${project.build.directory}">
                         <include name="**/openssl-${opensslVersion}.tar.gz" />
                       </fileset>
-                    </ftp>
+                    </ftp>-->
                     <checksum file="${project.build.directory}/openssl-${opensslVersion}.tar.gz" algorithm="SHA-256" property="${opensslSha256}" verifyProperty="isEqual" />
                     <gunzip src="${project.build.directory}/openssl-${opensslVersion}.tar.gz" dest="${project.build.directory}/" />
                     <untar src="${project.build.directory}/openssl-${opensslVersion}.tar" dest="${project.build.directory}/" />
@@ -199,11 +200,14 @@
                 <configuration>
                   <target>
                     <!-- Download the openssl source. -->
-                    <ftp action="get" server="ftp.openssl.org" remotedir="source" userid="anonymous" password="anonymous" passive="yes" verbose="yes">
+                    <exec executable="wget" failonerror="true" dir="${project.build.directory}">
+                       <arg line="https://www.openssl.org/source/openssl-${opensslVersion}.tar.gz"/>
+                    </exec>
+                    <!--<ftp action="get" server="ftp.openssl.org" remotedir="source" userid="anonymous" password="anonymous" passive="yes" verbose="yes">
                       <fileset dir="${project.build.directory}">
                         <include name="**/openssl-${opensslVersion}.tar.gz" />
                       </fileset>
-                    </ftp>
+                    </ftp>-->
                     <!-- Use the tar command (rather than the untar ant task) in order to preserve file permissions. -->
                     <exec executable="tar" failonerror="true" dir="${project.build.directory}/" resolveexecutable="true">
                       <arg line="xfvz openssl-${opensslVersion}.tar.gz" />
